create a separate yml for German

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,8 @@ guru:
     password: somepass
     url: SomeUrl
 
----
+
 spring:
-    profiles: de
-guru:
-  jms:
-    username: JMS Username $$$$$$ German
+    profiles:
+        include:
+               de
